# ticketsforall_backend

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: docker.yml  linter.yml  tests.yml
adapters/src/jwt/: __init__.py  jwt_token.py  verify_admin.py
adapters/src/oauth/: __init__.py  google_oauth.py  oauth_session.py
adapters/src/repositories/: __init__.py
adapters/src/repositories/memory/: __init__.py  memory_user_repository.py
adapters/src/repositories/sql/: __init__.py  sql_user_repository.py
adapters/src/repositories/sql/tables/: __init__.py  user.py
adapters/tests/: __init__.py
adapters/tests/jwt/: test_jwt.py
adapters/tests/sql_repositories/: __init__.py  test_sql_user_repository.py
alembic/: env.py
alembic/versions/: a298b1afddee_update_user_table.py
api/src/: create_app.py
api/src/dtos/: __init__.py  user.py
api/src/routers/: __init__.py  google_login.py  health_check_routes.py  user_routes.py
core/src/exceptions/: __init__.py
core/src/exceptions/business/: __init__.py  base.py  user.py
core/src/exceptions/repository/: __init__.py  base.py  user.py
core/src/models/: user.py
core/src/repositories/: user_repository.py
core/src/use_cases/: __init__.py
core/src/use_cases/user/: __init__.py
core/tests/use_cases/user/: test_create_user.py  test_get_all_users.py
factories/config/: cors.py
factories/repositories/: __init__.py  user.py
factories/use_cases/: __init__.py  user.py
(+6 files in other folders)
