[tool.poetry]
name = "ticketsforall-backend"
version = "0.1.0"
description = ""
authors = ["Cristopher Molina <58301825+Csmolina@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
autoflake = "^2.3.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^24.8.0"
pre-commit = "^3.8.0"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
