[tool.poetry]
name = "ticketsforall-backend"
version = "0.1.0"
description = ""
authors = ["Cristopher Molina <58301825+Csmolina@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
autoflake = "^2.3.1"
fastapi = {extras = ["standard"], version = "^0.112.2"}
uvicorn = "^0.30.6"
authlib = "^1.3.2"
sqlalchemy = "^2.0.34"
alembic = "^1.13.2"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^24.8.0"
pre-commit = "^3.8.0"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
